@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-02-20"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090220
-#define RUBY_PATCHLEVEL 133
+#define RUBY_PATCHLEVEL 134
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
